статика секции слайдер, стили базовых кнопок

--- a/index.html
+++ b/index.html
@@ -1,18 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Poppins:wght@300;400;500;700&family=Ramabhadra&display=swap" rel="stylesheet">
-</head>
-<body>
-    <h1>Hello</h1>
-    <h2>Hello</h2>
-    <h3>Hello</h3>
-    <h4>Hello</h4>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+        <link rel="stylesheet" href="/css/main.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Poppins:wght@300;400;500;700&family=Ramabhadra&display=swap"
+            rel="stylesheet"
+        />
+    </head>
+
+    <body>
+        <section class="courses">
+            <div class="section__title">
+                <div class="h2">Courses</div>
+            </div>
+            <div class="slider-wrapper">
+                <div class="slider__content">
+                    <div class="play-button"></div>
+                    <div class="slider__content-text">
+                        Simple Beginner Guide To Yoga
+                    </div>
+                    <div class="slider__content-author">Niketa Roy</div>
+                    <div class="slider__buttons-row">
+                        <button class="button">Buy Now <span> &#163; </span> 1500</button>
+                        <button class="button button-gray">More</button>
+                    </div>
+                </div>
+                <div class="slider-controls">
+                    <div class="slider-controls-left"></div>
+                    <div class="slider-page"></div>
+                    <div class="slider-controls-right"></div>
+                </div>
+            </div>
+        </section>
+    </body>
 </html>
