--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+
+
+
+
+
+
+
+
+
+
+
+
     
+    <script>
+
+    </script>
 </body>
 </html>
