--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             </div>
             <div class="slider-wrapper">
                 <div class="slider__content">
+                    <img class="slider-img" src="./img/slide-img/main-slide.jpg" alt="">
                     <div class="play-button"></div>
                     <div class="slider__content-text">
                         Simple Beginner Guide To Yoga
@@ -31,9 +32,21 @@
                     </div>
                 </div>
                 <div class="slider-controls">
-                    <div class="slider-controls-left"></div>
-                    <div class="slider-page"></div>
-                    <div class="slider-controls-right"></div>
+                    <div class="slider-controls-left">
+                        <svg width="35" height="35" viewBox="0 0 35 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M26.9999 17.8943C26.9999 18.448 26.6579 18.9056 26.2142 18.9781L26.0908 18.988L7.90901 18.988C7.40693 18.988 6.99992 18.4983 6.99992 17.8943C6.99992 17.3406 7.34192 16.8829 7.78565 16.8105L7.90901 16.8005L26.0908 16.8005C26.5929 16.8005 26.9999 17.2902 26.9999 17.8943Z" fill="#626262"/>
+                            <path d="M15.7923 25.9048C16.2203 26.331 16.2218 27.0235 15.7956 27.4516C15.4081 27.8407 14.8006 27.8773 14.3717 27.5606L14.2488 27.4549L5.42589 18.6699C5.03559 18.2813 5.00008 17.6715 5.31939 17.2427L5.42583 17.1199L14.2487 8.3334C14.6768 7.90715 15.3693 7.90858 15.7955 8.3366C16.183 8.72571 16.2171 9.33342 15.8985 9.76094L15.7923 9.8834L7.74812 17.8953L15.7923 25.9048Z" fill="#626262"/>
+                        </svg>
+                    </div>
+                    <div class="slider-pagination">
+                        1 <span>&#8725;</span> 7
+                    </div>
+                    <div class="slider-controls-right">
+                        <svg width="35" height="35" viewBox="0 0 35 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M8.00008 17.094C8.00008 16.5403 8.34209 16.0827 8.78582 16.0102L8.90918 16.0002L27.091 16.0002C27.5931 16.0002 28.0001 16.4899 28.0001 17.094C28.0001 17.6477 27.6581 18.1053 27.2144 18.1778L27.091 18.1877L8.90917 18.1877C8.4071 18.1877 8.00008 17.6981 8.00008 17.094Z" fill="#626262"/>
+                            <path d="M19.2077 9.08348C18.7797 8.65727 18.7782 7.96475 19.2044 7.53669C19.5919 7.14755 20.1994 7.11094 20.6283 7.42772L20.7512 7.53336L29.5741 16.3184C29.9644 16.707 29.9999 17.3167 29.6806 17.7456L29.5742 17.8684L20.7513 26.6549C20.3232 27.0811 19.6307 27.0797 19.2045 26.6517C18.817 26.2626 18.7829 25.6549 19.1015 25.2273L19.2077 25.1049L27.2519 17.093L19.2077 9.08348Z" fill="#626262"/>
+                        </svg>
+                    </div>
                 </div>
             </div>
         </section>
