--- a/index.html
+++ b/index.html
@@ -1,27 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body>
+    <div class="container">
+        <div class="wrap_workshop">
+            <h1>Workshops</h1>
+            <div class="box_card">
+                <div class="card_workshop left_card">
+                    <div class="card_workshop_btn">
+                        <h3>Yoga Beginner Headstart</h3>
+                        <p>Headstart your yoga journey with namayog</p>
+                        <button class="btn btn_left">Buy Now ₹</button>
+                        <button class="btn btn_right">More</button>
+                    </div>
+                </div>
+                <div class="card_workshop right_card">
+                    <div class="card_workshop_btn">
+                        <h3>Yoga Beginner Headstart</h3>
+                        <p>Headstart your yoga journey with namayog</p>
+                        <button class="btn btn_left">Buy Now ₹</button>
+                        <button class="btn btn_right">More</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="wrap_classes">
+            <h1>Upcoming Classes</h1>
+            <div class="box_classes">
+                <div class="classes_text">
+                    <p>It has been proved that getting more exercise means less risk of developing severe illness
+                        according to a recent study of physical activity & Covid-19 hospitalisations. The study which
+                        involved more than 50,000 people who had developed Covid proved that those who were the most
+                        active before falling ill were least likely to be hospitalized or die as a result of the
+                        illness. Read the New York Times article here - Being Fit can save your life.</p>
+                    <div class="btn"><a href="#">See all Classes</a><svg width="24" height="24" viewBox="0 0 24 24"
+                            fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M23.0677 11.9929L18.818 7.75739L17.4061 9.17398L19.2415 11.0032L0.932469 11.0012L0.932251 13.0012L19.2369 13.0032L17.4155 14.8308L18.8321 16.2426L23.0677 11.9929Z"
+                                fill="currentColor" />
+                        </svg>
+                    </div>
+                </div>
+                <div class="subscribe">
+                    <div class="subscribe_btn">
+                        <h3>Yoga Beginner Headstart</h3>
+                        <p>Headstart your yoga journey with namayog</p>
+                        <div class="btn"><a href="#">Buy Subscription </a></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
 
-
-
-
-
-
-
-
-
-    
     <script>
 
     </script>
 </body>
+
 </html>
