--- a/index.html
+++ b/index.html
@@ -1,12 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Poppins&family=Ramabhadra&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
-    <link rel="stylesheet" href="/css/style.css">
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <div class="wrapper">
+      <div class="container">
+        <div class="WHY_US">
+        <div class="title">WHY US ?</div>
+        <div class="text">
+          <p>
+            The International Sivananda Yoga Vedanta Centres is a non-profit
+            organization named after Swami Sivananda, one of the most
+            influential spiritual teachers of the 20th century and founded by
+            his disciple Swami Vishnudevananda.
+          </p>
+          <p>
+            The mission – to spread peace, health and joy through yoga. All are
+            welcome to come to our ashrams and centres to learn not only about
+            how yoga can help maintain a healthy body but also how yogic
+            philosophy, applied in daily life, can help maintain a peaceful mind
+            and spirit.
+          </p>
+
+          <p>
+            In 1957, Swami Vishnudevananda on instructions from his guru, Swami
+            Sivananda, came to the West to bring the teachings of yoga. He
+            established the first Sivananda Yoga Vedanta centre in Montreal,
+            Canada, in 1959 and to date there are close to 60 Sivananda
+            locations (ashrams, yoga centres and affiliated centres) around the
+            world. Over 26,000 teachers have been trained in the TTC programs.
+          </p>
+
+          <p>
+            The Sivananda Yoga Vedanta Ashrams and Centres are recognized
+            worldwide for teaching yoga authentically, preserving its purity and
+            tradition dating back several thousand years. They also offer a wide
+            range of programs and even the possibility for spiritual growth
+            through Karma yoga as a temporary or full time staff program
+            participant.
+          </p>
+          <button class="button">More</button>
+        </div>
+      </div>
+        <div class="img_why_us">
+          <img class="img" src="img/69.svg" alt="">
+        </div>
+    </div>
+  </body>
 </html>
