Пагинация и лэбйл с уровнем подготовленности

--- a/index.html
+++ b/index.html
@@ -20,12 +20,17 @@
                 <div class="section__title">
                     <div class="h2">Courses</div>
                 </div>
-                <div class="slider">
-    
+
+                <div class="slider">    
                     <div class="slider__wrapper">
-                        <div class="slide">
+                        <div class="slide lable">
                             <img class="slider-img" src="./img/slide-img/slide-img-1.jpg" alt="">
-                            <div class="play-button"></div>
+                            <div class="play-button">
+                                <svg width="114" height="114" viewBox="0 0 114 114" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <circle opacity="0.25" cx="57" cy="57.0002" r="57" fill="white"/>
+                                    <path d="M38 57.4367V46.8277C38 33.6141 47.1875 28.2144 58.4375 34.8212L67.5 40.1574L76.5625 45.4937C87.8125 52.1005 87.8125 62.9 76.5625 69.5068L67.5 74.8431L58.4375 80.1793C47.1875 86.7861 38 81.3863 38 68.1728V57.4367Z" fill="#48B84A"/>
+                                </svg>                                
+                            </div>
                             <div class="slider__content-text">
                                 Simple Beginner Guide To Yoga
                             </div>
@@ -35,9 +40,14 @@
                                 <button class="button button-gray">More</button>
                             </div>
                         </div>
-                        <div class="slide">
+                        <div class="slide lable">
                             <img class="slider-img" src="./img/slide-img/slide-img-1.jpg" alt="">
-                            <div class="play-button"></div>
+                            <div class="play-button">
+                                <svg width="114" height="114" viewBox="0 0 114 114" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <circle opacity="0.25" cx="57" cy="57.0002" r="57" fill="white"/>
+                                    <path d="M38 57.4367V46.8277C38 33.6141 47.1875 28.2144 58.4375 34.8212L67.5 40.1574L76.5625 45.4937C87.8125 52.1005 87.8125 62.9 76.5625 69.5068L67.5 74.8431L58.4375 80.1793C47.1875 86.7861 38 81.3863 38 68.1728V57.4367Z" fill="#48B84A"/>
+                                </svg>
+                            </div>
                             <div class="slider__content-text">
                                 Simple Beginner Guide To Yoga
                             </div>
@@ -47,9 +57,14 @@
                                 <button class="button button-gray">More</button>
                             </div>
                         </div>
-                        <div class="slide">
+                        <div class="slide lable">
                             <img class="slider-img" src="./img/slide-img/main-slide.jpg" alt="">
-                            <div class="play-button"></div>
+                            <div class="play-button">
+                                <svg width="114" height="114" viewBox="0 0 114 114" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <circle opacity="0.25" cx="57" cy="57.0002" r="57" fill="white"/>
+                                    <path d="M38 57.4367V46.8277C38 33.6141 47.1875 28.2144 58.4375 34.8212L67.5 40.1574L76.5625 45.4937C87.8125 52.1005 87.8125 62.9 76.5625 69.5068L67.5 74.8431L58.4375 80.1793C47.1875 86.7861 38 81.3863 38 68.1728V57.4367Z" fill="#48B84A"/>
+                                </svg>
+                            </div>
                             <div class="slider__content-text">
                                 Simple Beginner Guide To Yoga
                             </div>
@@ -59,9 +74,14 @@
                                 <button class="button button-gray">More</button>
                             </div>
                         </div>
-                        <div class="slide">
+                        <div class="slide lable">
                             <img class="slider-img" src="./img/slide-img/slide-img-3.jpg" alt="">
-                            <div class="play-button"></div>
+                            <div class="play-button">
+                                <svg width="114" height="114" viewBox="0 0 114 114" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <circle opacity="0.25" cx="57" cy="57.0002" r="57" fill="white"/>
+                                    <path d="M38 57.4367V46.8277C38 33.6141 47.1875 28.2144 58.4375 34.8212L67.5 40.1574L76.5625 45.4937C87.8125 52.1005 87.8125 62.9 76.5625 69.5068L67.5 74.8431L58.4375 80.1793C47.1875 86.7861 38 81.3863 38 68.1728V57.4367Z" fill="#48B84A"/>
+                                </svg>
+                            </div>
                             <div class="slider__content-text">
                                 Simple Beginner Guide To Yoga
                             </div>
@@ -71,9 +91,14 @@
                                 <button class="button button-gray">More</button>
                             </div>
                         </div>
-                        <div class="slide">
+                        <div class="slide lable">
                             <img class="slider-img" src="./img/slide-img/slide-img-3.jpg" alt="">
-                            <div class="play-button"></div>
+                            <div class="play-button">
+                                <svg width="114" height="114" viewBox="0 0 114 114" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <circle opacity="0.25" cx="57" cy="57.0002" r="57" fill="white"/>
+                                    <path d="M38 57.4367V46.8277C38 33.6141 47.1875 28.2144 58.4375 34.8212L67.5 40.1574L76.5625 45.4937C87.8125 52.1005 87.8125 62.9 76.5625 69.5068L67.5 74.8431L58.4375 80.1793C47.1875 86.7861 38 81.3863 38 68.1728V57.4367Z" fill="#48B84A"/>
+                                </svg>
+                            </div>
                             <div class="slider__content-text">
                                 Simple Beginner Guide To Yoga
                             </div>
@@ -93,7 +118,9 @@
                             </svg>
                         </div>
                         <div class="slider-pagination">
-                            1 <span>&#8725;</span> 7
+                            <a class="pagination-num" data-page="current">1</a>
+                             <span>&#8725;</span>
+                            <a class="pagination-num" data-page="total">7</a>
                         </div>
                         <div class="slider__btn-next slider__navigation" data-dir="next">
                             <svg width="35" height="35" viewBox="0 0 35 35" fill="none" xmlns="http://www.w3.org/2000/svg">
