--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link
+            href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Poppins:wght@300;400;500;700&family=Ramabhadra&display=swap"
+            rel="stylesheet"
+        />
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
@@ -50,11 +54,111 @@
                 </div>
                 <div class="subscribe">
                     <div class="subscribe_btn">
-                        <h3>Yoga Beginner Headstart</h3>
-                        <p>Headstart your yoga journey with namayog</p>
+                        <h3>Simple Beginner Guide To Yoga</h3>
+                        <p>Smruthi Settlur</p>
                         <div class="btn"><a href="#">Buy Subscription </a></div>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="wrap_plans">
+            <h1>Subscription Plans</h1>
+            <div class="grid_container">
+                <div class="grid-item item1">
+                    <div class="session_text">
+                        <div class="quantiti_session">
+                            <div class="quantiti">1</div>
+                            <p>Trial Session</p>
+                        </div>
+                        <p>FREE</p>
+                    </div>
+                    <div class="session_list">
+                        <ul>
+                            <li>Warm Up</li>
+                            <li>30 min session</li>
+                            <li>Group lessons</li>
+                            <li>Aerobics</li>
+                            <li>Yoga</li>
+                        </ul>
+                        <div class="session_btn btn"><a href="#">I want it</a></div>
+                    </div>
+                </div>
+                <div class="grid-item item2">
+                    <div class="session_text">
+                        <div class="quantiti_session">
+                            <div class="quantiti"><p>12</p></div>
+                            <p>Session</p>
+                        </div>
+                        <p>₹12,000</p>
+                    </div>
+                    <div class="session_list">
+                        <ul>
+                            <li>Warm Up</li>
+                            <li>30 min session</li>
+                            <li>Group lessons</li>
+                            <li>Aerobics</li>
+                            <li>Yoga</li>
+                        </ul>
+                        <div class="session_btn btn"><a href="#">I want it</a></div>
+                    </div>
+                </div>
+                <div class="grid-item item3">
+                    <div class="session_text">
+                        <div class="quantiti_session">
+                            <div class="quantiti">16</div>
+                            <p>Session</p>
+                        </div>
+                        <p>₹16,000</p>
+                    </div>
+                    <div class="session_list">
+                        <ul>
+                            <li>Warm Up</li>
+                            <li>30 min session</li>
+                            <li>Group lessons</li>
+                            <li>Aerobics</li>
+                            <li>Yoga</li>
+                        </ul>
+                        <div class="session_btn btn"><a href="#">I want it</a></div>
+                    </div>
+                </div>
+                <div class="grid-item item4">
+                    <div class="session_text">
+                        <div class="quantiti_session">
+                            <div class="quantiti">20</div>
+                            <p>Session</p>
+                        </div>
+                        <p class="cost">₹18,000</p>
+                    </div>
+                    <div class="session_list">
+                        <ul>
+                            <li>Warm Up</li>
+                            <li>30 min session</li>
+                            <li>Group lessons</li>
+                            <li>Aerobics</li>
+                            <li>Yoga</li>
+                        </ul>
+                        <div class="session_btn btn"><a href="#">I want it</a></div>
+                    </div>
+                </div>
+                <!-- <div class="grid-item item5">
+                    <div class="session_text">
+                        <div class="quantiti_session">
+                            <div class="quantiti">1</div>
+                            <p>Trial Session</p>
+                        </div>
+                        <p>FREE</p>
+                    </div>
+                    <div class="session_list">
+                        <ul>
+                            <li>Warm Up</li>
+                            <li>30 min session</li>
+                            <li>Group lessons</li>
+                            <li>Aerobics</li>
+                            <li>Yoga</li>
+                        </ul>
+                        <div class="session_btn btn"><a href="#">I want it</a></div>
+                    </div>
+                </div> -->
             </div>
         </div>
     </div>
