--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Poppins&family=Ramabhadra&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Document</title>
   </head>
   <body>
