--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <div class="box_card">
                 <div class="card_workshop left_card">
                     <div class="card_workshop_btn">
+                        <div class="elem_data">Jul, 25 2021  <br> 15:38</div>
                         <h3>Yoga Beginner Headstart</h3>
                         <p>Headstart your yoga journey with namayog</p>
                         <button class="btn btn_left">Buy Now ₹</button>
@@ -55,7 +56,10 @@
                 <div class="subscribe">
                     <div class="subscribe_btn">
                         <h3>Simple Beginner Guide To Yoga</h3>
-                        <p>Smruthi Settlur</p>
+                        <div class="subscribe_btn_png">
+                            <div class="profile_icon"><div class="circle"></div></div>
+                            <p>Smruthi Settlur</p>
+                        </div>
                         <div class="btn"><a href="#">Buy Subscription </a></div>
                     </div>
                 </div>
