--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
                 </div>
             </div>
 
-            <div class="swiper-pagination">
+            <div class="swiper-pagination" id="swiper__pagination">
             </div>
 
                 <div class="custom-button-prev"></div>
