Готово всё кроме кнопок на 2 странице

--- a/index.html
+++ b/index.html
@@ -57,37 +57,29 @@
         </div>
       </div>
       <div class="information">
-        <div class="rectangle"><div class="square">
-          <div class="description1">PRIYA BHARADWAJ</div>
-          <div class="description2">FOUNDER, EVENT MANAGEMENT COMPANY</div>
-        </div></div>
-        <div class="flex">
-        <div class="title">What people say about us?</div>
-        <div class="text">
-          <div class="quotes">
-            <svg width="170" height="118" viewBox="0 0 170 118" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M83.3591 78.0111C83.3591 89.1555 79.4209 98.3333 70.888 106.2C63.0116 114.722 53.8224 118 43.3205 118C30.1931 118 19.6911 113.411 11.8147 103.578C3.93822 94.4 0 83.2556 0 70.1444C0 45.8889 20.3475 22.2889 61.6988 0L67.6062 9.17778C53.8224 20.9778 46.6023 30.1556 46.6023 37.3667C46.6023 39.3333 49.2278 41.9556 55.1351 43.9222C63.668 47.2 70.2317 50.4778 72.8571 53.1C80.0772 58.3444 83.3591 66.8667 83.3591 78.0111ZM170 78.0111C170 89.1555 166.062 98.3333 158.842 106.2C150.965 114.722 141.776 118 130.618 118C117.49 118 106.988 113.411 99.112 103.578C91.2355 94.4 87.2973 83.2556 87.2973 70.1444C87.2973 45.8889 107.645 22.2889 148.996 0L155.56 9.17778C141.12 20.9778 133.9 30.1556 133.9 37.3667C133.9 39.3333 137.181 41.9556 143.745 43.9222C152.278 47.2 158.185 50.4778 161.467 53.1C166.718 58.3444 170 66.8667 170 78.0111Z" fill="#233133"/>
-              </svg>
+        <div class="rectangle">
+          <div class="square">
+            <div class="description1">PRIYA BHARADWAJ</div>
+            <div class="description2">FOUNDER, EVENT MANAGEMENT COMPANY</div>
           </div>
-          <p>
-            As a marathon runner, I was looking to hire a yoga instructor to
-            complement my running regime and to relieve running related aches
-            and pains. Most of the trainers I found online were not up to the
-            mark. Either they were not certified or they did not have the
-            requisite experience to train clients with specific needs such as
-            me.
-          </p>
-          <svg width="32" height="17" viewBox="0 0 32 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path opacity="0.5" fill-rule="evenodd" clip-rule="evenodd" d="M8.08726 0.916142C8.2203 0.971349 8.34115 1.05226 8.44287 1.15424C8.54485 1.25597 8.62576 1.37681 8.68097 1.50985C8.73618 1.64289 8.76459 1.78552 8.76459 1.92956C8.76459 2.0736 8.73618 2.21623 8.68097 2.34927C8.62576 2.48231 8.54485 2.60316 8.44287 2.70488L3.74102 7.40496H30.6348C30.9252 7.40496 31.2037 7.52033 31.4091 7.7257C31.6145 7.93107 31.7299 8.20961 31.7299 8.50004C31.7299 8.79048 31.6145 9.06902 31.4091 9.27438C31.2037 9.47975 30.9252 9.59513 30.6348 9.59513H3.74096L8.44287 14.2953C8.6485 14.5009 8.76402 14.7798 8.76402 15.0706C8.76402 15.3614 8.6485 15.6403 8.44287 15.8459C8.23724 16.0515 7.95835 16.1671 7.66755 16.1671C7.37675 16.1671 7.09786 16.0515 6.89223 15.8459L0.321716 9.2754C0.219736 9.17367 0.138824 9.05283 0.0836182 8.91978C0.0284119 8.78674 -5.72205e-06 8.64412 -5.72205e-06 8.50008C-5.72205e-06 8.35603 0.0284119 8.21341 0.0836182 8.08036C0.138824 7.94732 0.219736 7.82648 0.321716 7.72475L6.89223 1.15424C6.99395 1.05226 7.1148 0.971349 7.24784 0.916142C7.38088 0.860936 7.52351 0.83252 7.66755 0.83252C7.81159 0.83252 7.95422 0.860936 8.08726 0.916142Z" fill="#48B84A"/>
-            </svg>
-            <svg width="46" height="25" viewBox="0 0 46 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M32.2745 0.13633C32.0576 0.226334 31.8606 0.358244 31.6947 0.524505C31.5285 0.690347 31.3966 0.887359 31.3066 1.10426C31.2166 1.32116 31.1702 1.55368 31.1702 1.78852C31.1702 2.02335 31.2166 2.25587 31.3066 2.47277C31.3966 2.68967 31.5285 2.88669 31.6947 3.05253L39.3602 10.7151H2.51531C2.04181 10.7151 1.5877 10.9032 1.25289 11.238C0.918077 11.5728 0.72998 12.0269 0.72998 12.5004C0.72998 12.9739 0.918077 13.4281 1.25289 13.7629C1.5877 14.0977 2.04181 14.2858 2.51531 14.2858H39.3603L31.6947 21.9484C31.3595 22.2836 31.1712 22.7383 31.1712 23.2124C31.1712 23.6865 31.3595 24.1412 31.6947 24.4764C32.03 24.8117 32.4846 25 32.9587 25C33.4328 25 33.8875 24.8117 34.2228 24.4764L44.9347 13.7645C45.101 13.5986 45.2329 13.4016 45.3229 13.1847C45.4129 12.9678 45.4592 12.7353 45.4592 12.5005C45.4592 12.2656 45.4129 12.0331 45.3229 11.8162C45.2329 11.5993 45.101 11.4023 44.9347 11.2365L34.2228 0.524505C34.0569 0.358244 33.8599 0.226334 33.643 0.13633C33.4261 0.046327 33.1936 0 32.9587 0C32.7239 0 32.4914 0.046327 32.2745 0.13633Z" fill="#48B84A"/>
-              </svg>
-          <div class="quotes">
-            <svg width="170" height="118" viewBox="0 0 170 118" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M86.6409 39.9889C86.6409 28.8444 90.5792 19.6667 99.112 11.8C106.988 3.27777 116.178 -4.7053e-06 126.68 -3.7872e-06C139.807 -2.63956e-06 150.309 4.58889 158.185 14.4222C166.062 23.6 170 34.7444 170 47.8556C170 72.1111 149.653 95.7111 108.301 118L102.394 108.822C116.178 97.0222 123.398 87.8444 123.398 80.6333C123.398 78.6667 120.772 76.0444 114.865 74.0778C106.332 70.8 99.7683 67.5222 97.1429 64.9C89.9228 59.6555 86.6409 51.1333 86.6409 39.9889ZM6.81995e-06 39.9889C7.79423e-06 28.8444 3.93823 19.6666 11.1583 11.8C19.0348 3.27777 28.2239 -1.23945e-05 39.3822 -1.1419e-05C52.5097 -1.02713e-05 63.0116 4.58888 70.888 14.4222C78.7645 23.6 82.7027 34.7444 82.7027 47.8556C82.7027 72.1111 62.3552 95.7111 21.0038 118L14.4401 108.822C28.8803 97.0222 36.1004 87.8444 36.1004 80.6333C36.1004 78.6667 32.8185 76.0444 26.2548 74.0778C17.722 70.8 11.8147 67.5222 8.53281 64.9C3.28185 59.6555 5.84567e-06 51.1333 6.81995e-06 39.9889Z" fill="#233133"/>
-              </svg>
         </div>
+        <div class="flex">
+          <div class="title2">WHAT PEOPLE SAY ABOUT US?</div>
+          <div class="text">
+            <div class="quotes_t">
+              <img src="../web_yoga_team/img/quotes1.svg" alt="">
+            </div>
+            <p class="text2">
+              As a marathon runner, I was looking to hire a yoga instructor to
+              complement my running regime and to relieve running related aches
+              and pains. Most of the trainers I found online were not up to the
+              mark. Either they were not certified or they did not have the
+              requisite experience to train clients with specific <br> needs such as
+              me.
+            </p>
+            <div class="quotes_b">
+              <img src="../web_yoga_team/img/quotes2.svg" alt="">
+            </div>
           </div>
         </div>
       </div>
