--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Poppins:wght@300;400;500;700&family=Ramabhadra&display=swap"
         rel="stylesheet" />
     <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
@@ -204,15 +204,15 @@
         </div>
         <div class="container_why_us">
             <div class="WHY_US">
-                <div class="title">WHY US ?</div>
-                <div class="text">
-                    <p>
+                <div class="title_why_us">WHY US ?</div>
+                <div class="text_why_us">
+                    <p class="paragraph">
                         The International Sivananda Yoga Vedanta Centres is a non-profit
                         organization named after Swami Sivananda, one of the most
                         influential spiritual teachers of the 20th century and founded by
                         his disciple Swami Vishnudevananda.
                     </p>
-                    <p>
+                    <p class="paragraph">
                         The mission – to spread peace, health and joy through yoga. All
                         are welcome to come to our ashrams and centres to learn not only
                         about how yoga can help maintain a healthy body but also how yogic
@@ -220,7 +220,7 @@
                         mind and spirit.
                     </p>
 
-                    <p>
+                    <p class="paragraph">
                         In 1957, Swami Vishnudevananda on instructions from his guru,
                         Swami Sivananda, came to the West to bring the teachings of yoga.
                         He established the first Sivananda Yoga Vedanta centre in
