--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <body>
         <section class="courses">
             <div class="container-fluid">
-                <div class="section__title">
+                <div class="courses__title">
                     <div class="h2">Courses</div>
                 </div>
 
                 <div class="slider">    
-                    <div class="slider__wrapper">
+                    <div class="slider__wrapper ">
                         <div class="slide lable">
                             <img class="slider-img" src="./img/slide-img/slide-img-1.jpg" alt="">
                             <div class="play-button">
