--- a/index.html
+++ b/index.html
@@ -19,6 +19,65 @@
 
 <body>
     <div class="container">
+        <div class="traning__plans">
+            <div class="traning__plans-top">
+                <h2 class="traning__plans-title">
+                    THE ULTIMATE <br>
+                    ONLINE PERSONAL <br>
+                    <span>TRANING PLANS</span>
+                </h2>
+                <div class="traning__plans-add">
+                    <div class="traning__plans-benefit">
+                        <p> GET MORE <br> BENEFIT BY <br> JOINING <br> MEMBERSHIP</p>
+                    </div>
+                    <div class="traning__plans-plus">
+                        PLUS
+                    </div>
+                </div>
+            </div>
+            <div class="traning__plans-description">
+                <p>
+                    Use our diverse media library to create the yoga ritual that suits you. Moved or relaxed,
+                    flexible and individual - just your yoga.
+                </p>
+            </div>
+
+
+
+
+            <div class="traning__plans-body">
+                <div class="traning__plan-block">
+                    <div class="traning__plans-text">
+                        <p class="traning__text-title">We're here for you</p>
+                        <p class="traning__text-discription">Choose the right one from our constantly growing media
+                            library.
+                            Whenever you want. Where you want.</p>
+                    </div>
+                    <div class="btn-box">
+                        <a class="prev"></a>
+                        <a class="next"></a>
+                    </div>
+                </div>
+                <div class="traning__slider">
+                    <div class="traning__slider-list">
+                        <div class="traning__plans-slide">
+                            <img src="images/slide-img.jpg" alt="">
+                        </div>
+                        <div class="traning__plans-slide">
+                            <img src="images/slide-img.jpg" alt="">
+                        </div>
+                        <div class="traning__plans-slide">
+                            <img src="images/slide-img.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+
+
+
         <div class="wrapper">
             <h2 class="title ">OUR TEACHERS</h2>
             <div class="image-slider swiper-container">
@@ -194,10 +253,8 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="swiper-pagination" id="swiper__pagination">
                 </div>
-
                 <div class="custom-button-prev"></div>
                 <div class="custom-button-next"></div>
             </div>
