--- a/index.html
+++ b/index.html
@@ -24,19 +24,21 @@
                     <div class="slider__wrapper ">
                         <div class="slide lable">
                             <img class="slider-img" src="./img/slide-img/slide-img-1.jpg" alt="">
-                            <div class="play-button">
-                                <svg width="114" height="114" viewBox="0 0 114 114" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <circle opacity="0.25" cx="57" cy="57.0002" r="57" fill="white"/>
-                                    <path d="M38 57.4367V46.8277C38 33.6141 47.1875 28.2144 58.4375 34.8212L67.5 40.1574L76.5625 45.4937C87.8125 52.1005 87.8125 62.9 76.5625 69.5068L67.5 74.8431L58.4375 80.1793C47.1875 86.7861 38 81.3863 38 68.1728V57.4367Z" fill="#48B84A"/>
-                                </svg>                                
-                            </div>
-                            <div class="slider__content-text">
-                                Simple Beginner Guide To Yoga
-                            </div>
-                            <div class="slider__content-author">Niketa Roy</div>
-                            <div class="slider__buttons-row">
-                                <button class="button">Buy Now <span> &#163; </span> 1500</button>
-                                <button class="button button-gray">More</button>
+                            <div class="slider__content">
+                                <div class="play-button">
+                                    <svg width="114" height="114" viewBox="0 0 114 114" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <circle opacity="0.25" cx="57" cy="57.0002" r="57" fill="white"/>
+                                        <path d="M38 57.4367V46.8277C38 33.6141 47.1875 28.2144 58.4375 34.8212L67.5 40.1574L76.5625 45.4937C87.8125 52.1005 87.8125 62.9 76.5625 69.5068L67.5 74.8431L58.4375 80.1793C47.1875 86.7861 38 81.3863 38 68.1728V57.4367Z" fill="#48B84A"/>
+                                    </svg>                                
+                                </div>
+                                <div class="slider__content-text">
+                                    Simple Beginner Guide To Yoga
+                                </div>
+                                <div class="slider__content-author">Niketa Roy</div>
+                                <div class="slider__buttons-row">
+                                    <button class="button">Buy Now <span> &#163; </span> 1500</button>
+                                    <button class="button button-gray">More</button>
+                                </div>
                             </div>
                         </div>
                         <div class="slide lable">
