--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Poppins:wght@300;400;500;700&family=Ramabhadra&display=swap"
         rel="stylesheet" />
     <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
