--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
             rel="stylesheet"
         />
     <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/main.css">
 
     <title>Document</title>
 
@@ -996,14 +997,14 @@
           </div>
       </section>
 
-      <section class="subscribe">
-          <div class="container">
-              <div class="subscribe__wrapper">
+      <section class="newsletter">
+          <div class="newsletter_container">
+              <div class="newsleter__wrapper">
                   <div class="section__title">
                       <div class="h2">Subscribe to Newsletter</div>
                   </div>
-                  <p class="subscribe__message">Reduce stress, regain focus,better day. Sculpt your ideal body,free your true self</p>
-                  <div class="subscribe__block">
+                  <p class="newsletter__message">Reduce stress, regain focus,better day. Sculpt your ideal body,free your true self</p>
+                  <div class="newsletter__block">
                       <input class="input" type="text" placeholder="Enter your email address......">
                       <button class="button">Subscribe</button>
                   </div>
