--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
             <div class="header__logo">
               <img src="img/Logo.svg" alt="Logo" />
             </div>
-            <div class="header_burger">
+            <a class="header_burger" href="#">
               <span></span>
-            </div>
+            </a>
             <nav class="header_nav">
-              <ul class="header_nav-list">
+              <ul class="header_nav-list" >
                 <li class="header_nav-item">
                   <a class="header__nav-link" href="#">Home</a>
                 </li>
@@ -478,7 +478,7 @@
         </div>
       </div>
     </div>
-
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
