--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/main.css">
 
     <title>Document</title>
@@ -295,8 +295,8 @@
         </div>
         <div class="container_why_us">
             <div class="WHY_US">
-                <div class="title">WHY US ?</div>
-                <div class="text">
+                <div class="title_why_us">WHY US ?</div>
+                <div class="text_why_us">
                     <p>
                         The International Sivananda Yoga Vedanta Centres is a non-profit
                         organization named after Swami Sivananda, one of the most
@@ -357,6 +357,12 @@
                         requisite experience to train clients with specific <br> needs such as
                         me.
                     </p>
+                    <div class="btn-box_why_us">
+                    <div class="btn-box">
+                        <a class="prev"></a>
+                        <a class="next"></a>
+                    </div>
+                </div>
                     <div class="quotes_b">
                         <img src="../web_yoga_team/img/quotes2.svg" alt="">
                     </div>
@@ -691,8 +697,7 @@
         </div>
     </div>
     <script src="./js/slider.js"></script>
-    <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script> -->
-
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
 </body>
