Адаптив на проверку

--- a/index.html
+++ b/index.html
@@ -295,8 +295,8 @@
         </div>
         <div class="container_why_us">
             <div class="WHY_US">
-                <div class="title">WHY US ?</div>
-                <div class="text">
+                <div class="title_why_us">WHY US ?</div>
+                <div class="text_why_us">
                     <p>
                         The International Sivananda Yoga Vedanta Centres is a non-profit
                         organization named after Swami Sivananda, one of the most
@@ -337,14 +337,14 @@
             </div>
         </div>
         <div class="information">
-            <div class="rectangle">
-                <div class="square">
-                    <div class="description1">PRIYA BHARADWAJ</div>
-                    <div class="description2">FOUNDER, EVENT MANAGEMENT COMPANY</div>
-                </div>
-            </div>
+            <div class="title2">WHAT PEOPLE SAY ABOUT US?</div>
             <div class="flex">
-                <div class="title2">WHAT PEOPLE SAY ABOUT US?</div>
+                <div class="rectangle">
+                    <div class="square">
+                        <div class="description1">PRIYA BHARADWAJ</div>
+                        <div class="description2">FOUNDER, EVENT MANAGEMENT COMPANY</div>
+                    </div>
+                </div>
                 <div class="text">
                     <div class="quotes_t">
                         <img src="../web_yoga_team/img/quotes1.svg" alt="">
@@ -357,6 +357,12 @@
                         requisite experience to train clients with specific <br> needs such as
                         me.
                     </p>
+                    <div class="btn-box_information">
+                    <div class="btn-box">
+                        <a class="prev"></a>
+                        <a class="next"></a>
+                    </div>
+                </div>
                     <div class="quotes_b">
                         <img src="../web_yoga_team/img/quotes2.svg" alt="">
                     </div>
@@ -691,7 +697,7 @@
         </div>
     </div>
     <script src="./js/slider.js"></script>
-    <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script> -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
